src/objects/ffps_brunt__Collection__c.object
<CustomObject>
    <fields>
        <fullName>ffps_brunt__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Account used to filter the transaction lines</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Collections</relationshipLabel>
        <relationshipName>Collections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__BankAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Bank Account used to filter the transaction lines</inlineHelpText>
        <label>Bank Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>c2g__codaBankAccount__c.c2g__OwnerCompany__c</field>
                <operation>equals</operation>
                <valueField>$Source.ffps_brunt__Company__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaBankAccount__c</referenceTo>
        <relationshipLabel>Collections</relationshipLabel>
        <relationshipName>Collections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__CollectionCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Collection Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Collections</relationshipLabel>
        <relationshipName>Collections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__CollectionStatus__c</fullName>
        <label>Collection Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Selected</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Cash Entry Stage</fullName>
                </value>
                <value>
                    <fullName>Saved</fullName>
                </value>
                <value>
                    <fullName>Matching Stage</fullName>
                </value>
                <value>
                    <fullName>Matched</fullName>
                </value>
                <value>
                    <fullName>Matched with Errors</fullName>
                </value>
                <value>
                    <fullName>Canceled with Errors</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Canceling Stage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffps_brunt__Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Company used to filter the transaction lines</inlineHelpText>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Collections</relationshipLabel>
        <relationshipName>Collections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__Credit_Balances__c</fullName>
        <inlineHelpText>Number of collection summaries that have a credit balance within this collection</inlineHelpText>
        <label>Credit Balances</label>
        <summaryFilterItems>
            <field>ffps_brunt__CollectionSummary__c.ffps_brunt__TotalAmounttoPay__c</field>
            <operation>lessThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ffps_brunt__CollectionSummary__c.ffps_brunt__Selected__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ffps_brunt__CollectionSummary__c.ffps_brunt__Collection__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__CurrencyWriteOff__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Currency Write-Off</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Collections (Currency Write-Off)</relationshipLabel>
        <relationshipName>Collections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__DueDate__c</fullName>
        <inlineHelpText>The date used to filter Transaction Lines by Due Date</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__GeneralLedgerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>GLA used to filter Transaction Lines</inlineHelpText>
        <label>General Ledger Account</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Collections (General Ledger Account)</relationshipLabel>
        <relationshipName>Collections1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__InvoiceDate__c</fullName>
        <inlineHelpText>The date used to filter Transaction Lines by Transaction Date</inlineHelpText>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__PaymentDate__c</fullName>
        <inlineHelpText>Matching Date used during Cash Matching Stage</inlineHelpText>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__SettlementDiscount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Settlement Discount</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Collections (Settlement Discount)</relationshipLabel>
        <relationshipName>Collections2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__Total_Amount_To_Pay__c</fullName>
        <label>Total Amount To Pay</label>
        <summarizedField>ffps_brunt__CollectionSummary__c.ffps_brunt__TotalAmounttoPay__c</summarizedField>
        <summaryForeignKey>ffps_brunt__CollectionSummary__c.ffps_brunt__Collection__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__Total_Outstanding_Balance__c</fullName>
        <label>Total Outstanding Balance</label>
        <summarizedField>ffps_brunt__CollectionSummary__c.ffps_brunt__TotalOutstandingBalance__c</summarizedField>
        <summaryForeignKey>ffps_brunt__CollectionSummary__c.ffps_brunt__Collection__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Collection</label>
    <listViews>
        <fullName>ffps_brunt__All</fullName>
        <columns>NAME</columns>
        <columns>ffps_brunt__Company__c</columns>
        <columns>ffps_brunt__BankAccount__c</columns>
        <columns>ffps_brunt__Total_Amount_To_Pay__c</columns>
        <columns>ffps_brunt__Total_Outstanding_Balance__c</columns>
        <columns>ffps_brunt__CollectionStatus__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>C{000000}</displayFormat>
        <label>Collection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>